--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.76.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "uuid": "^13.0.0"
